--- a/webapp/manifestOld.json
+++ b/webapp/manifestOld.json
@@ -81,8 +81,8 @@
 				"routerClass": "sap.f.routing.Router",
 				"viewType": "XML",
 				"viewPath": "sio.hcm.mandate.view",
-				"controlId": "app",
-				"controlAggregation": "pages",
+				"controlId": "layout",
+				"controlAggregation": "beginColumnPages",
 				"bypassed": {
 					"target": "notFound"
 				},
@@ -120,16 +120,19 @@
 				"object": {
 					"viewName": "Detail",
 					"viewId": "detail",
-					"viewLevel": 1
+					"viewLevel": 1,
+					"controlAggregation": "midColumnPages"
 				},
 				"create": {
 					"viewName": "Create",
 					"viewId": "create",
-					"viewLevel": 1
+					"viewLevel": 1,
+					"controlAggregation": "midColumnPages"
 				},
 				"detailObjectNotFound": {
 					"viewName": "DetailObjectNotFound",
-					"viewId": "detailObjectNotFound"
+					"viewId": "detailObjectNotFound",
+					"controlAggregation": "midColumnPages"
 				},
 				"notFound": {
 					"viewName": "NotFound",
