--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,141 +1,167 @@
 {
-	"_version": "1.12.0",
-	"sap.app": {
-		"id": "sio.hcm.mandate",
-		"type": "application",
-		"i18n": "i18n/i18n.properties",
-		"title": "{{appTitle}}",
-		"description": "{{appDescription}}",
-		"applicationVersion": {
-			"version": "1.0.0"
-		},
-		"resources": "resources.json",
-		"dataSources": {
-			"mainService": {
-				"uri": "/sap/opu/odata/sap/ZHCM_MAND_REQ_SRV/",
-				"type": "OData",
-				"settings": {
-					"odataVersion": "2.0",
-					"localUri": "localService/metadata.xml"
-				}
-			}
-		},
-		"sourceTemplate": {
-			"id": "sap.ui.ui5-template-plugin.2masterdetail",
-			"version": "1.117.5"
-		}
-	},
-	"sap.ui": {
-		"technology": "UI5",
-		"icons": {
-			"icon": "sap-icon://detail-view",
-			"favIcon": "",
-			"phone": "",
-			"phone@2": "",
-			"tablet": "",
-			"tablet@2": ""
-		},
-		"deviceTypes": {
-			"desktop": true,
-			"tablet": true,
-			"phone": true
-		}
-	},
-	"sap.ui5": {
-		"rootView": {
-			"viewName": "sio.hcm.mandate.view.App",
-			"type": "XML",
-			"async": true,
-			"id": "app"
-		},
-		"dependencies": {
-			"minUI5Version": "1.66.0",
-			"libs": {
-				"sap.ui.core": {},
-				"sap.m": {},
-				"sap.f": {},
-				"sap.ushell": {},
-				"sap.collaboration": {
-					"lazy": true
-				}
-			}
-		},
-		"contentDensities": {
-			"compact": true,
-			"cozy": true
-		},
-		"models": {
-			"i18n": {
-				"type": "sap.ui.model.resource.ResourceModel",
-				"settings": {
-					"bundleName": "sio.hcm.mandate.i18n.i18n"
-				}
-			},
-			"": {
-				"dataSource": "mainService",
-				"preload": true
-			}
-		},
-		"routing": {
-			"config": {
-				"routerClass": "sap.f.routing.Router",
-				"viewType": "XML",
-				"viewPath": "sio.hcm.mandate.view",
-				"controlId": "app",
-				"controlAggregation": "pages",
-				"bypassed": {
-					"target": "notFound"
-				},
-				"async": true
-			},
-			"routes": [
-				{
-					"pattern": "",
-					"name": "master",
-					"target": "master"
-				},
-				{
-					"pattern": "ZI_MANDREQ_HDR/{objectId}",
-					"name": "object",
-					"target": [
-						"master",
-						"object"
-					]
-				},
-				{
-					"pattern": "Create",
-					"name": "create",
-					"target": [
-						"master",
-						"create"
-					]
-				}
-			],
-			"targets": {
-				"master": {
-					"viewName": "Master",
-					"viewLevel": 1,
-					"viewId": "master"
-				},
-				"object": {
-					"viewName": "Detail",
-					"viewId": "detail",
-					"viewLevel": 1
-				},
-				"create": {
-					"viewName": "Create",
-					"viewId": "create",
-					"viewLevel": 1
-				},
-				"detailObjectNotFound": {
-					"viewName": "DetailObjectNotFound",
-					"viewId": "detailObjectNotFound"
-				},
-				"notFound": {
-					"viewName": "NotFound",
-					"viewId": "notFound"
-				}
-			}
-		}
-	}
+    "_version": "1.12.0",
+    "sap.app": {
+        "id": "sio.hcm.mandate",
+        "type": "application",
+        "i18n": "i18n/i18n.properties",
+        "title": "{{appTitle}}",
+        "description": "{{appDescription}}",
+        "applicationVersion": {
+            "version": "1.0.0"
+        },
+        "resources": "resources.json",
+        "dataSources": {
+            "mainService": {
+                "uri": "/sap/opu/odata/sap/ZHCM_MAND_REQ_SRV/",
+                "type": "OData",
+                "settings": {
+                    "odataVersion": "2.0",
+                    "localUri": "localService/metadata.xml"
+                }
+            }
+        },
+        "sourceTemplate": {
+            "id": "sap.ui.ui5-template-plugin.2masterdetail",
+            "version": "1.117.5",
+            "toolsId": "9c033662-2a15-4d57-8d23-5baacadf7ded"
+        },
+        "crossNavigation": {
+            "inbounds": {
+                "mandate-manage": {
+                    "semanticObject": "Mandate",
+                    "action": "manage",
+                    "title": "{{flpTitle}}",
+                    "subTitle": "{{flpSubtitle}}",
+                    "signature": {
+                        "parameters": {},
+                        "additionalParameters": "allowed"
+                    }
+                }
+            }
+        }
+    },
+    "sap.ui": {
+        "technology": "UI5",
+        "icons": {
+            "icon": "sap-icon://detail-view",
+            "favIcon": "",
+            "phone": "",
+            "phone@2": "",
+            "tablet": "",
+            "tablet@2": ""
+        },
+        "deviceTypes": {
+            "desktop": true,
+            "tablet": true,
+            "phone": true
+        }
+    },
+    "sap.ui5": {
+        "rootView": {
+            "viewName": "sio.hcm.mandate.view.App",
+            "type": "XML",
+            "async": true,
+            "id": "app"
+        },
+        "dependencies": {
+            "minUI5Version": "1.120.0",
+            "libs": {
+                "sap.ui.core": {},
+                "sap.m": {},
+                "sap.f": {},
+                "sap.ushell": {},
+                "sap.collaboration": {
+                    "lazy": true
+                }
+            }
+        },
+        "contentDensities": {
+            "compact": true,
+            "cozy": true
+        },
+        "models": {
+            "i18n": {
+                "type": "sap.ui.model.resource.ResourceModel",
+                "settings": {
+                    "bundleName": "sio.hcm.mandate.i18n.i18n"
+                }
+            },
+            "": {
+                "dataSource": "mainService",
+                "preload": true,
+                "settings": {
+                    "defaultBindingMode": "TwoWay",
+                    "earlyTokenRequest": true,
+                    "tokenHandling": true
+                }
+            }
+        },
+        "routing": {
+            "config": {
+                "routerClass": "sap.f.routing.Router",
+                "viewType": "XML",
+                "viewPath": "sio.hcm.mandate.view",
+                "controlId": "app",
+                "controlAggregation": "pages",
+                "bypassed": {
+                    "target": "notFound"
+                },
+                "async": true
+            },
+            "routes": [
+                {
+                    "pattern": "",
+                    "name": "master",
+                    "target": "master"
+                },
+                {
+                    "pattern": "ZI_MANDREQ_HDR/{objectId}",
+                    "name": "object",
+                    "target": [
+                        "master",
+                        "object"
+                    ],
+                    "parent":"cross.fnd.fiori.inbox.Component:detail"
+                },
+                {
+                    "pattern": "detail/{scenarioid}/{wfInstanceId}/{taskPath}",
+                    "name": "wfobject",
+                    "target": "object"
+                },
+                {
+                    "pattern": "Create",
+                    "name": "create",
+                    "target": [
+                        "master",
+                        "create"
+                    ]
+                }
+            ],
+            "targets": {
+                "master": {
+                    "viewName": "Master",
+                    "viewLevel": 1,
+                    "viewId": "master"
+                },
+                "object": {
+                    "viewName": "Detail",
+                    "viewId": "detail",
+                    "viewLevel": 1
+                },
+                "create": {
+                    "viewName": "Create",
+                    "viewId": "create",
+                    "viewLevel": 1
+                },
+                "detailObjectNotFound": {
+                    "viewName": "DetailObjectNotFound",
+                    "viewId": "detailObjectNotFound"
+                },
+                "notFound": {
+                    "viewName": "NotFound",
+                    "viewId": "notFound"
+                }
+            }
+        }
+    }
 }
